tests/error/tracing_errors/bad_return1.py
from guppylang.decorator import guppy


@guppy.comptime
def test() -> int:
    return 1.0


guppy.compile(test)
