tests/error/tracing_errors/bad_return1.err
Error: Type mismatch (at $FILE:5:0)
  | 
3 | 
4 | @guppy.comptime
5 | def test() -> int:
  | ^^^^^^^^^^^^^^^^^^
6 |     return 1.0
  | ^^^^^^^^^^^^^^ Expected return value of type `int`, got `float`

Guppy compilation failed due to 1 previous error
